@@ -101,7 +101,15 @@ require. If running as PID 1, \fBsvscan\fR will immediately restart a
 \fBsupervise\fR process if it dies, rather waiting for 60 (or SCANINTERVAL)
 seconds. This behaviour can be enabled as default by setting \fBSCANNOW\fR
 environment variable. Setting this variable enables a signal handler for
-\fBSIGCHILD\fR.
+\fBSIGCHILD\fR. If running as PID 1, \fBsvscan\fR will relay \fBSIGTERM\fR
+to all children when it gets \fBSIGTERM\fR. By default, it will send
+\fBSIGTERM\fR twice - first immediately and second one after 30 secs
+followed by \fBSIGKILL\fR after another 30 secs. The default of 30 seconds
+can be changed by setting \fBKILLWAIT1\fR and \fBKILLWAIT2\fR environment
+variables. Instead of \fBKILLWAIT1\fR, \fBKILLWAIT2\fR you can set
+\fBKILLWAIT\fR environment variable to have second \fBSIGTERM\fR after
+\fBKILLWAIT\fR/2 secs and \fBSIGKILL\fR after \fBKILLWAIT\fR secs. Setting
+\fBKILLWAIT\fR overrides \fBKILLWAIT1\fR and \fBKILLWAIT2\fR.
 
 If \fBINITCMD\fR environment variable is defined and set to an empty string
 and if \fI@servicedir@\fR/.\fIsvscan\fR/\fIrun\fR exists and has the
