@@ -40,6 +40,11 @@ Release 1.1.3-1.1 Start 27/04/2023 End 01/01/2024
 19. multilog.c: BUG: fix wrong argument passed to open_read() in finish()
 - 26/02/2024
 20. systemd.in: replace /etc/init.d/svscan with /usr/bin/qmailctl for ExeStop
+- 28/02/2024
+21. svscan.c: send SIGTERM twice followed by SIGKILL to terminate logging and
+    then remaining processes
+22. supervise.c: Fixed termination of processes with -G option when no
+    processes found in a process group
 
 * Sun Apr 23 2023 17:05:00 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 20/02/2023 End 23/04/2023
